# NCS-internship-2021

./: README.md
Code/Basics/: Izhikevich_model.ipynb  norse_spiking_neuron-w.ipynb  norse_subthreshold_neuron.ipynb  simple_norse_architecture.ipynb  spinnaker_subthreshold_neuron.ipynb  v_norse.csv
Code/Basics/.ipynb_checkpoints/: Izhikevich_model-checkpoint.ipynb  norse_spiking_neuron-w-checkpoint.ipynb  norse_subthreshold_neuron-checkpoint.ipynb  simple_norse_architecture-checkpoint.ipynb  spinnaker_subthreshold_neuron-checkpoint.ipynb
Code/Basics/summary/common/: spikes_1.csv  spikes_2.csv  spikes_3.csv  spikes_4.csv  spikes_5.csv
Code/Basics/summary/norse/: voltage_spikes_5.csv
Code/Izhikevich Model/: Model simulation.ipynb
Code/Izhikevich Model/.ipynb_checkpoints/: Model simulation-checkpoint.ipynb
Code/Izhikevich Model/scripts/: input_generation.py  motorControl.py  visualization.py  weights.py
Code/Paper implementation/: Model simulation.ipynb  main.py  main_multiprocessing.py  main_multiprocessing_pipes.py
Code/Paper implementation/utilities/: cib.py  input_generation.py  model.py  motorControl.py  visualization.py  weights.py
Code/RoboticHeadNRP/: README.md
Code/RoboticHeadNRP/TUM_Head/: model.config
Code/RoboticHeadNRP/cll_vmc_nmh/: bibi_configuration.bibi  check_topics.py  experiment_configuration.exc  uisettings.uis
Code/RoboticHeadNRP/cll_vmc_nmh_0_0/: environment.sdf  experiment_configuration.exc
Code/RoboticHeadNRP/rh_ball_plugin/: CMakeLists.txt  package.xml
Code/RoboticHeadNRP/rh_ball_plugin/launch/: main.launch  main_modelpush.launch
Code/RoboticHeadNRP/rh_ball_plugin/src/: model_push.cc
Code/RoboticHeadNRP/rh_ball_plugin/worlds/: model_push.world  simple_world.world
(+21 files in other folders)
